--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
   <!-- Challenge 1: Wrap the text below with a link that has an absolute path -->
-  <a href=https://1d4chan.org/wiki/Dragonborn>Absolute Path (external link)</a>
+  <a href=https://1d4chan.org/wiki/Dragonborn target ="_blank">Absolute Path (external link)</a>
 
   <!-- Challenge 2: Wrap the text below with a link that has a relative path to about.html-->
   <a href="about.html">Relative Path (internal link)</a>
