--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 <body>
 
   <!-- Challenge 1: Wrap the text below with a link that has an absolute path -->
-  <a href=https://1d4chan.org/wiki/Dragonborn>Absolute Path (external link)</a>
+  <p><a href=https://1d4chan.org/wiki/Dragonborn target ="_blank">Absolute Path (external link)</a></p>
 
   <!-- Challenge 2: Wrap the text below with a link that has a relative path to about.html-->
-  <a href="about.html">Relative Path (internal link)</a>
+  <p><a href="about.html">Relative Path (internal link)</a></p>
 
   <!-- Challenge 3: Wrap the img tag below with a link that uses the target attribute -->
-  <a href=https://ironboard-learn.s3.amazonaws.com/Image_61_lion.jpg target="_blank"><img src="https://ironboard-learn.s3.amazonaws.com/Image_61_lion.jpg" alt="Image by Alexas Fotos from Pixabay"></a>
+  <p><a href=https://ironboard-learn.s3.amazonaws.com/Image_61_lion.jpg target="_blank"><img src="https://ironboard-learn.s3.amazonaws.com/Image_61_lion.jpg" alt="Image by Alexas Fotos from Pixabay" width ="200" height ="200"></a></p>
 
 </body>
 </html>
